test/valid/Veiculo/Mota.plume
/**
 * Classe que representa uma mota extendendo a classe Veiculo
 *
 * @author 37060, Roberto Silva
 */
class Mota extends Veiculo is
	
	method override getNumLugares : () -> Integer is
		2
		
	method override getNumRodas : () -> Integer is
		2